# persistent-sensor-storage

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
docker/: Dockerfile  Dockerfile.test  docker-compose.yml
src/persistent_sensor_storage/: config.py  crud.py  database.py  init_db.py  main.py  models.py  schemas.py
src/persistent_sensor_storage/kafka/: config.py  consumers.py  producers.py  schemas.py
src/persistent_sensor_storage/routers/: nodes.py  sensors.py
tests/: conftest.py  test_main.py  test_nodes.py  test_sensors.py
tests/kafka/: conftest.py  test_consumers.py  test_integration.py  test_producers.py
