[project]
dependencies = []
name = "persistent-sensor-storage"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
persistent_sensor_storage = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pydantic = ">=2.10.6,<3"
fastapi = ">=0.115.11,<0.116"
uvicorn = ">=0.34.0,<0.35"
sqlalchemy = ">=2.0.39,<3"
python-dotenv = ">=1.0.1,<2"
psycopg2-binary = ">=2.9.9,<3"
